--- a/pod-security/baseline/disallow-host-namespaces/pod-bad.yaml
+++ b/pod-security/baseline/disallow-host-namespaces/pod-bad.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod01
+  name: badpod01-new
 spec:
   hostPID: true
   hostIPC: false
@@ -13,7 +13,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod02
+  name: badpod02-new
 spec:
   hostIPC: true
   containers:
@@ -25,7 +25,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod03
+  name: badpod03-new
 spec:
   hostNetwork: true
   containers:
@@ -37,7 +37,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod04
+  name: badpod04-new
 spec:
   hostPID: false
   hostIPC: true
@@ -47,3 +47,46 @@ spec:
     image: busybox:1.35
   - name: busybox02
     image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod01
+spec:
+  hostPID: true
+  containers:
+  - name: container01
+    image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod02
+spec:
+  hostIPC: true
+  containers:
+  - name: container01
+    image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod03
+spec:
+  hostNetwork: true
+  containers:
+  - name: container01
+    image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod04
+spec:
+  hostPID: true
+  hostIPC: true
+  hostNetwork: true
+  containers:
+  - name: container01
+    image: busybox:1.35
+---
