--- a/pod-security/baseline/disallow-host-namespaces/pod-good.yaml
+++ b/pod-security/baseline/disallow-host-namespaces/pod-good.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: goodpod01
+  name: goodpod01-new
 spec:
   containers:
   - name: busybox01
@@ -12,7 +12,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: goodpod02
+  name: goodpod02-new
 spec:
   hostPID: false
   containers:
@@ -22,7 +22,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: goodpod03
+  name: goodpod03-new
 spec:
   hostIPC: false
   containers:
@@ -34,13 +34,66 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: goodpod04
+  name: goodpod04-new
 spec:
   hostNetwork: false
   containers:
   - name: busybox01
     image: busybox:1.35
   - name: busybox02
+    image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: goodpod05-new
+spec:
+  hostPID: false
+  hostIPC: false
+  hostNetwork: false
+  containers:
+  - name: busybox01
+    image: busybox:1.35
+  - name: busybox02
+    image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: goodpod01
+spec:
+  containers:
+  - name: container01
+    image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: goodpod02
+spec:
+  hostPID: false
+  containers:
+  - name: container01
+    image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: goodpod03
+spec:
+  hostIPC: false
+  containers:
+  - name: container01
+    image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: goodpod04
+spec:
+  hostNetwork: false
+  containers:
+  - name: container01
     image: busybox:1.35
 ---
 apiVersion: v1
@@ -52,7 +105,6 @@ spec:
   hostIPC: false
   hostNetwork: false
   containers:
-  - name: busybox01
+  - name: container01
     image: busybox:1.35
-  - name: busybox02
-    image: busybox:1.35
+---
