--- a/pod-security/baseline/disallow-host-path/pod-bad.yaml
+++ b/pod-security/baseline/disallow-host-path/pod-bad.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod01
+  name: badpod01-new
 spec:
   containers:
   - name: busybox
@@ -18,7 +18,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod02
+  name: badpod02-new
 spec:
   containers:
   - name: busybox
@@ -35,7 +35,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod03
+  name: badpod03-new
 spec:
   containers:
   - name: busybox
@@ -44,3 +44,40 @@ spec:
   - name: foo
     hostPath:
       path: /home/junk
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod01
+spec:
+  containers:
+  - name: container01
+    image: busybox:1.35
+    volumeMounts:
+      - name: udev
+        mountPath: /data
+  volumes:
+  - name: udev
+    hostPath:
+      path: /etc/udev
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod02
+spec:
+  containers:
+  - name: container01
+    image: busybox:1.35
+    volumeMounts:
+      - name: udev
+        mountPath: /data
+      - name: temp
+        mountPath: /scratch
+  volumes:
+  - name: temp
+    emptyDir: {}
+  - name: udev
+    hostPath:
+      path: /etc/udev
+---
