--- a/pod-security/baseline/disallow-host-path/podcontroller-bad.yaml
+++ b/pod-security/baseline/disallow-host-path/podcontroller-bad.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app: busybox
-  name: baddeployment01
+  name: baddeployment01-new
 spec:
   replicas: 1
   selector:
@@ -30,7 +30,7 @@ spec:
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: badcronjob01
+  name: badcronjob01-new
 spec:
   schedule: "* * * * *"
   jobTemplate:
@@ -49,3 +49,106 @@ spec:
               medium: memory
               sizeLimit: 20Mi
           restartPolicy: OnFailure
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: baddeployment01
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app
+  template:
+    metadata:
+      labels:
+        app: app
+    spec:
+      containers:
+      - name: container01
+        image: busybox:1.35
+        volumeMounts:
+          - name: udev
+            mountPath: /data
+      volumes:
+      - name: udev
+        hostPath:
+          path: /etc/udev
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: baddeployment02
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app
+  template:
+    metadata:
+      labels:
+        app: app
+    spec:
+      containers:
+      - name: container01
+        image: busybox:1.35
+        volumeMounts:
+          - name: udev
+            mountPath: /data
+          - name: temp
+            mountPath: /scratch
+      volumes:
+      - name: temp
+        emptyDir: {}
+      - name: udev
+        hostPath:
+          path: /etc/udev
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: badcronjob01
+spec:
+  schedule: "*/1 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          containers:
+          - name: container01
+            image: busybox:1.35
+            volumeMounts:
+              - name: udev
+                mountPath: /data
+          volumes:
+          - name: udev
+            hostPath:
+              path: /etc/udev
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: badcronjob02
+spec:
+  schedule: "*/1 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          containers:
+          - name: container01
+            image: busybox:1.35
+            volumeMounts:
+              - name: udev
+                mountPath: /data
+              - name: temp
+                mountPath: /scratch
+          volumes:
+          - name: temp
+            emptyDir: {}
+          - name: udev
+            hostPath:
+              path: /etc/udev
+---
