--- a/pod-security/baseline/disallow-host-path/podcontroller-good.yaml
+++ b/pod-security/baseline/disallow-host-path/podcontroller-good.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app: busybox
-  name: gooddeployment01
+  name: gooddeployment01-new
 spec:
   replicas: 1
   selector:
@@ -33,7 +33,7 @@ spec:
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: goodcronjob01
+  name: goodcronjob01-new
 spec:
   schedule: "* * * * *"
   jobTemplate:
@@ -55,3 +55,81 @@ spec:
                 - key: foo
                   path: bar
           restartPolicy: OnFailure
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: gooddeployment01
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app
+  template:
+    metadata:
+      labels:
+        app: app
+    spec:
+      containers:
+      - name: container01
+        image: busybox:1.35
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: gooddeployment02
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app
+  template:
+    metadata:
+      labels:
+        app: app
+    spec:
+      containers:
+      - name: container01
+        image: busybox:1.35
+        volumeMounts:
+          - name: temp
+            mountPath: /scratch
+      volumes:
+      - name: temp
+        emptyDir: {}
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: goodcronjob01
+spec:
+  schedule: "*/1 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          containers:
+          - name: container01
+            image: busybox:1.35
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: goodcronjob02
+spec:
+  schedule: "*/1 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          containers:
+          - name: container01
+            image: busybox:1.35
+            volumeMounts:
+              - name: temp
+                mountPath: /scratch
+          volumes:
+          - name: temp
+            emptyDir: {}
