--- a/pod-security/baseline/disallow-host-process/pod-bad.yaml
+++ b/pod-security/baseline/disallow-host-process/pod-bad.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod01
+  name: badpod01-new
 spec:
   initContainers:
   - name: busybox01-init
@@ -21,7 +21,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod02
+  name: badpod02-new
 spec:
   containers:
   - name: busybox01
@@ -33,7 +33,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod03
+  name: badpod03-new
 spec:
   containers:
   - name: busybox01
@@ -43,3 +43,102 @@ spec:
         hostProcess: true
   - name: busybox02
     image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod01
+spec:
+  hostNetwork: true
+  containers:
+  - name: container01
+    image: busybox:1.35
+    securityContext:
+      windowsOptions:
+        hostProcess: true
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod02
+spec:
+  hostNetwork: true
+  containers:
+  - name: container01
+    image: busybox:1.35
+    securityContext:
+      windowsOptions:
+        hostProcess: true
+  - name: container02
+    image: busybox:1.35
+    securityContext:
+      windowsOptions:
+        hostProcess: true
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod03
+spec:
+  hostNetwork: true
+  initContainers:
+  - name: initcontainer01
+    image: busybox:1.35
+    securityContext:
+      windowsOptions:
+        hostProcess: true
+  containers:
+  - name: container01
+    image: busybox:1.35
+    securityContext:
+      windowsOptions:
+        hostProcess: true
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod04
+spec:
+  hostNetwork: true
+  initContainers:
+  - name: initcontainer01
+    image: busybox:1.35
+    securityContext:
+      windowsOptions:
+        hostProcess: true
+  - name: initcontainer02
+    image: busybox:1.35
+    securityContext:
+      windowsOptions:
+        hostProcess: true
+  containers:
+  - name: container01
+    image: busybox:1.35
+    securityContext:
+      windowsOptions:
+        hostProcess: true
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod05
+spec:
+  hostNetwork: true
+  initContainers:
+  - name: initcontainer01
+    image: busybox:1.35
+    securityContext:
+      windowsOptions:
+        hostProcess: true
+  - name: initcontainer02
+    image: busybox:1.35
+    securityContext:
+      windowsOptions:
+        hostProcess: true
+  containers:
+  - name: container01
+    image: busybox:1.35
+    securityContext:
+      windowsOptions:
+        hostProcess: true
+---
