--- a/pod-security/baseline/disallow-host-process/podcontroller-bad.yaml
+++ b/pod-security/baseline/disallow-host-process/podcontroller-bad.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: baddeployment01
+  name: baddeployment01-new
 spec:
   replicas: 1
   selector:
@@ -30,7 +30,7 @@ spec:
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: badcronjob01
+  name: badcronjob01-new
 spec:
   schedule: "*/1 * * * *"
   jobTemplate:
@@ -52,3 +52,275 @@ spec:
             securityContext:
               windowsOptions:
                 hostProcess: true
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: baddeployment01
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app
+  template:
+    metadata:
+      labels:
+        app: app
+    spec:
+      hostNetwork: true
+      containers:
+      - name: container01
+        image: busybox:1.35
+        securityContext:
+          windowsOptions:
+            hostProcess: true
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: baddeployment02
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app
+  template:
+    metadata:
+      labels:
+        app: app
+    spec:
+      hostNetwork: true
+      containers:
+      - name: container01
+        image: busybox:1.35
+        securityContext:
+          windowsOptions:
+            hostProcess: true
+      - name: container02
+        image: busybox:1.35
+        securityContext:
+          windowsOptions:
+            hostProcess: true
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: baddeployment03
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app
+  template:
+    metadata:
+      labels:
+        app: app
+    spec:
+      hostNetwork: true
+      initContainers:
+      - name: initcontainer01
+        image: busybox:1.35
+        securityContext:
+          windowsOptions:
+            hostProcess: true
+      containers:
+      - name: container01
+        image: busybox:1.35
+        securityContext:
+          windowsOptions:
+            hostProcess: true
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: baddeployment04
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app
+  template:
+    metadata:
+      labels:
+        app: app
+    spec:
+      hostNetwork: true
+      initContainers:
+      - name: initcontainer01
+        image: busybox:1.35
+        securityContext:
+          windowsOptions:
+            hostProcess: true
+      - name: initcontainer02
+        image: busybox:1.35
+        securityContext:
+          windowsOptions:
+            hostProcess: true
+      containers:
+      - name: container01
+        image: busybox:1.35
+        securityContext:
+          windowsOptions:
+            hostProcess: true
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: baddeployment05
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app
+  template:
+    metadata:
+      labels:
+        app: app
+    spec:
+      hostNetwork: true
+      initContainers:
+      - name: initcontainer01
+        image: busybox:1.35
+        securityContext:
+          windowsOptions:
+            hostProcess: true
+      - name: initcontainer02
+        image: busybox:1.35
+        securityContext:
+          windowsOptions:
+            hostProcess: true
+      containers:
+      - name: container01
+        image: busybox:1.35
+        securityContext:
+          windowsOptions:
+            hostProcess: true
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: badcronjob01
+spec:
+  schedule: "*/1 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          hostNetwork: true
+          containers:
+          - name: container01
+            image: busybox:1.35
+            securityContext:
+              windowsOptions:
+                hostProcess: true
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: badcronjob02
+spec:
+  schedule: "*/1 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          hostNetwork: true
+          containers:
+          - name: container01
+            image: busybox:1.35
+            securityContext:
+              windowsOptions:
+                hostProcess: true
+          - name: container02
+            image: busybox:1.35
+            securityContext:
+              windowsOptions:
+                hostProcess: true
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: badcronjob03
+spec:
+  schedule: "*/1 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          hostNetwork: true
+          initContainers:
+          - name: initcontainer01
+            image: busybox:1.35
+            securityContext:
+              windowsOptions:
+                hostProcess: true
+          containers:
+          - name: container01
+            image: busybox:1.35
+            securityContext:
+              windowsOptions:
+                hostProcess: true
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: badcronjob04
+spec:
+  schedule: "*/1 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          hostNetwork: true
+          initContainers:
+          - name: initcontainer01
+            image: busybox:1.35
+            securityContext:
+              windowsOptions:
+                hostProcess: true
+          - name: initcontainer02
+            image: busybox:1.35
+            securityContext:
+              windowsOptions:
+                hostProcess: true
+          containers:
+          - name: container01
+            image: busybox:1.35
+            securityContext:
+              windowsOptions:
+                hostProcess: true
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: badcronjob05
+spec:
+  schedule: "*/1 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          hostNetwork: true
+          initContainers:
+          - name: initcontainer01
+            image: busybox:1.35
+            securityContext:
+              windowsOptions:
+                hostProcess: true
+          - name: initcontainer02
+            image: busybox:1.35
+            securityContext:
+              windowsOptions:
+                hostProcess: true
+          containers:
+          - name: container01
+            image: busybox:1.35
+            securityContext:
+              windowsOptions:
+                hostProcess: true
+---
