--- a/pod-security/baseline/disallow-privileged-containers/pod-bad.yaml
+++ b/pod-security/baseline/disallow-privileged-containers/pod-bad.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod01
+  name: badpod01-new
 spec:
   initContainers:
   - name: busybox01-init
@@ -19,10 +19,64 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod02
+  name: badpod02-new
 spec:
   containers:
   - name: busybox01
+    image: busybox:1.35
+    securityContext:
+      privileged: true
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod03-new
+spec:
+  containers:
+  - name: busybox01
+    image: busybox:1.35
+    securityContext:
+      privileged: true
+  - name: busybox02
+    image: busybox:1.35
+    securityContext:
+      privileged: false
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod04-new
+spec:
+  containers:
+  - name: busybox01
+    image: busybox:1.35
+    securityContext:
+      privileged: false
+  - name: busybox02
+    image: busybox:1.35
+    securityContext:
+      privileged: true
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod01
+spec:
+  containers:
+  - name: container01
+    image: busybox:1.35
+    securityContext:
+      privileged: true
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod02
+spec:
+  containers:
+  - name: container01
+    image: busybox:1.35
+  - name: container02
     image: busybox:1.35
     securityContext:
       privileged: true
@@ -32,27 +86,46 @@ kind: Pod
 metadata:
   name: badpod03
 spec:
-  containers:
-  - name: busybox01
+  initContainers:
+  - name: initcontainer01
     image: busybox:1.35
     securityContext:
       privileged: true
-  - name: busybox02
+  containers:
+  - name: container01
     image: busybox:1.35
-    securityContext:
-      privileged: false
 ---
 apiVersion: v1
 kind: Pod
 metadata:
   name: badpod04
 spec:
-  containers:
-  - name: busybox01
+  initContainers:
+  - name: initcontainer01
     image: busybox:1.35
-    securityContext:
-      privileged: false
-  - name: busybox02
+  - name: initcontainer02
     image: busybox:1.35
     securityContext:
       privileged: true
+  containers:
+  - name: container01
+    image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod05
+spec:
+  initContainers:
+  - name: initcontainer01
+    image: busybox:1.35
+  - name: initcontainer02
+    image: busybox:1.35
+    securityContext:
+      privileged: true
+  containers:
+  - name: container01
+    image: busybox:1.35
+    securityContext:
+      privileged: true
+---
