--- a/pod-security/baseline/restrict-apparmor-profiles/pod-bad.yaml
+++ b/pod-security/baseline/restrict-apparmor-profiles/pod-bad.yaml
@@ -21,3 +21,14 @@ spec:
   containers:
   - name: busybox01
     image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod01-new
+  annotations:
+    container.apparmor.security.beta.kubernetes.io/container01: unconfined
+spec:
+  containers:
+  - name: container01
+    image: busybox:1.35
