--- a/pod-security/baseline/restrict-seccomp/pod-bad.yaml
+++ b/pod-security/baseline/restrict-seccomp/pod-bad.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod01
+  name: badpod01-new
 spec:
   initContainers:
   - name: busybox01-init
@@ -25,7 +25,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod02
+  name: badpod02-new
 spec:
   containers:
   - name: busybox01
@@ -42,7 +42,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod03
+  name: badpod03-new
 spec:
   securityContext:
     seccompProfile:
@@ -50,3 +50,111 @@ spec:
   containers:
   - name: busybox01
     image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod01
+spec:
+  containers:
+  - name: container01
+    image: busybox:1.35
+  securityContext:
+    seccompProfile:
+      type: Unconfined
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod02
+spec:
+  containers:
+  - name: container01
+    image: busybox:1.35
+    securityContext:
+      seccompProfile:
+        type: Unconfined
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod03
+spec:
+  containers:
+  - name: container01
+    image: busybox:1.35
+  - name: container02
+    image: busybox:1.35
+    securityContext:
+      seccompProfile:
+        type: Unconfined
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod04
+spec:
+  containers:
+  - name: container01
+    image: busybox:1.35
+    securityContext:
+      seccompProfile:
+        type: RuntimeDefault
+  - name: container02
+    image: busybox:1.35
+    securityContext:
+      seccompProfile:
+        type: Unconfined
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod05
+spec:
+  initContainers:
+  - name: initcontainer01
+    image: busybox:1.35
+    securityContext:
+      seccompProfile:
+        type: Unconfined
+  containers:
+  - name: container01
+    image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod06
+spec:
+  initContainers:
+  - name: initcontainer01
+    image: busybox:1.35
+  - name: initcontainer02
+    image: busybox:1.35
+    securityContext:
+      seccompProfile:
+        type: Unconfined
+  containers:
+  - name: container01
+    image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod07
+spec:
+  initContainers:
+  - name: initcontainer01
+    image: busybox:1.35
+    securityContext:
+      seccompProfile:
+        type: RuntimeDefault
+  - name: initcontainer02
+    image: busybox:1.35
+    securityContext:
+      seccompProfile:
+        type: Unconfined
+  containers:
+  - name: container01
+    image: busybox:1.35
+---
