--- a/pod-security/baseline/restrict-sysctls/pod-bad.yaml
+++ b/pod-security/baseline/restrict-sysctls/pod-bad.yaml
@@ -57,3 +57,31 @@ spec:
   containers:
   - name: busybox01
     image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod01-new
+spec:
+  containers:
+  - name: container01
+    image: busybox:1.35
+  securityContext:
+    sysctls:
+    - name: kernel.shm_next_id
+      value: "4"
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod02-new
+spec:
+  containers:
+  - name: container01
+    image: busybox:1.35
+  securityContext:
+    sysctls:
+    - name: kernel.shm_rmid_forced
+      value: "2"
+    - name: kernel.shm_next_id
+      value: "4"
