--- a/pod-security/baseline/restrict-sysctls/podcontroller-bad.yaml
+++ b/pod-security/baseline/restrict-sysctls/podcontroller-bad.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: baddeployment01
+  name: baddeployment01-new
 spec:
   replicas: 1
   selector:
@@ -27,7 +27,7 @@ spec:
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: badcronjob01
+  name: badcronjob01-new
 spec:
   schedule: "*/1 * * * *"
   jobTemplate:
@@ -46,3 +46,90 @@ spec:
           containers:
           - name: busybox01
             image: busybox:1.35
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: baddeployment01
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app
+  template:
+    metadata:
+      labels:
+        app: app
+    spec:
+      containers:
+      - name: container01
+        image: busybox:1.35
+      securityContext:
+        sysctls:
+        - name: kernel.shm_next_id
+          value: "4"
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: baddeployment02
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app
+  template:
+    metadata:
+      labels:
+        app: app
+    spec:
+      containers:
+      - name: container01
+        image: busybox:1.35
+      securityContext:
+        sysctls:
+        - name: kernel.shm_rmid_forced
+          value: "2"
+        - name: kernel.shm_next_id
+          value: "4"
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: badcronjob01
+spec:
+  schedule: "*/1 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          containers:
+          - name: container01
+            image: busybox:1.35
+          securityContext:
+            sysctls:
+            - name: kernel.shm_next_id
+              value: "4"
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: badcronjob02
+spec:
+  schedule: "*/1 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          containers:
+          - name: container01
+            image: busybox:1.35
+          securityContext:
+            sysctls:
+            - name: kernel.shm_rmid_forced
+              value: "2"
+            - name: kernel.shm_next_id
+              value: "4"
+---
