test: 8 tests from pod-sec/subrule/restricted, psa, psp-migration
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
           - other/res
           - other/s-z
           - pod-security
-          # - psa
+          - psa
           - psp-migration
           # - tekton
           # - traefik
