--- a/pod-security/subrule/restricted/restricted-exclude-capabilities/pod-good.yaml
+++ b/pod-security/subrule/restricted/restricted-exclude-capabilities/pod-good.yaml
@@ -290,7 +290,7 @@ metadata:
 spec:
   containers:
   - name: container01
-    image: nginx:1.1.9
+    image: nginx:dontpull
     securityContext:
       allowPrivilegeEscalation: false
       runAsNonRoot: true
@@ -317,7 +317,7 @@ spec:
         drop:
         - ALL
   - name: container02-init
-    image: redis:7.2
+    image: redis:dontpull
     securityContext:
       allowPrivilegeEscalation: false
       runAsNonRoot: true
@@ -328,7 +328,7 @@ spec:
         - SYS_ADMIN
   containers:
   - name: container01
-    image: nginx:1.1.9
+    image: nginx:dontpull
     securityContext:
       allowPrivilegeEscalation: false
       runAsNonRoot: true
