--- a/pod-security/subrule/restricted/restricted-exclude-capabilities/podcontroller-bad.yaml
+++ b/pod-security/subrule/restricted/restricted-exclude-capabilities/podcontroller-bad.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: container01
-        image: nginx:1.25
+        image: nginx:dontpull
         securityContext:
           allowPrivilegeEscalation: true
           runAsNonRoot: true
@@ -40,7 +40,7 @@ spec:
     spec:
       containers:
       - name: container01
-        image: nginx:1.25
+        image: nginx:dontpull
         securityContext:
           allowPrivilegeEscalation: false
           runAsNonRoot: false
@@ -66,7 +66,7 @@ spec:
     spec:
       containers:
       - name: container01
-        image: nginx:1.25
+        image: nginx:dontpull
         securityContext:
           allowPrivilegeEscalation: false
           runAsNonRoot: true
@@ -115,7 +115,7 @@ spec:
     spec:
       containers:
       - name: container01
-        image: nginx:1.25
+        image: nginx:dontpull
         securityContext:
           allowPrivilegeEscalation: false
           runAsUser: 0
@@ -205,7 +205,7 @@ spec:
           type: RuntimeDefault
       containers:
       - name: container01
-        image: nginx:1.25
+        image: nginx:dontpull
         securityContext:
           allowPrivilegeEscalation: false
           runAsNonRoot: true
@@ -236,7 +236,7 @@ spec:
           type: RuntimeDefault
       containers:
       - name: container01
-        image: nginx:1.25
+        image: nginx:dontpull
         ports:
         - name: web-insecure
           containerPort: 8080
@@ -271,7 +271,7 @@ spec:
           type: RuntimeDefault
       containers:
       - name: container01
-        image: nginx:1.25
+        image: nginx:dontpull
         securityContext:
           windowsOptions:
             hostProcess: true
@@ -304,7 +304,7 @@ spec:
           type: RuntimeDefault
       containers:
       - name: container01
-        image: nginx:1.25
+        image: nginx:dontpull
         securityContext:
           privileged: true
           allowPrivilegeEscalation: false
@@ -335,7 +335,7 @@ spec:
           type: RuntimeDefault
       containers:
       - name: container01
-        image: nginx:1.25
+        image: nginx:dontpull
         securityContext:
           seLinuxOptions:
             type: container_engine_t
@@ -369,7 +369,7 @@ spec:
           type: RuntimeDefault
       containers:
       - name: container01
-        image: nginx:1.25
+        image: nginx:dontpull
         securityContext:
           allowPrivilegeEscalation: false
           runAsNonRoot: true
@@ -401,7 +401,7 @@ spec:
           value: "4"
       containers:
       - name: container01
-        image: nginx:1.25
+        image: nginx:dontpull
         securityContext:
           allowPrivilegeEscalation: false
           runAsNonRoot: true
@@ -427,7 +427,7 @@ spec:
     spec:
       containers:
       - name: container01
-        image: nginx:1.25
+        image: nginx:dontpull
         securityContext:
           allowPrivilegeEscalation: false
           runAsNonRoot: true
@@ -459,7 +459,7 @@ spec:
     spec:
       containers:
       - name: container01
-        image: nginx:1.25
+        image: nginx:dontpull
         securityContext:
           allowPrivilegeEscalation: false
           runAsNonRoot: true
@@ -494,7 +494,7 @@ spec:
           type: RuntimeDefault
       containers:
       - name: container01
-        image: nginx:1.25
+        image: nginx:dontpull
         securityContext:
           seLinuxOptions:
             user: sysadm_u
@@ -523,7 +523,7 @@ spec:
           restartPolicy: OnFailure
           containers:
           - name: container01
-            image: nginx:1.25
+            image: nginx:dontpull
             securityContext:
               allowPrivilegeEscalation: true
               runAsNonRoot: true
@@ -549,7 +549,7 @@ spec:
           restartPolicy: OnFailure
           containers:
           - name: container01
-            image: nginx:1.25
+            image: nginx:dontpull
             securityContext:
               allowPrivilegeEscalation: false
               runAsNonRoot: false
@@ -575,7 +575,7 @@ spec:
           restartPolicy: OnFailure
           containers:
           - name: container01
-            image: nginx:1.25
+            image: nginx:dontpull
             securityContext:
               allowPrivilegeEscalation: false
               runAsNonRoot: true
@@ -624,7 +624,7 @@ spec:
           restartPolicy: OnFailure
           containers:
           - name: container01
-            image: nginx:1.25
+            image: nginx:dontpull
             securityContext:
               allowPrivilegeEscalation: false
               runAsUser: 0
@@ -667,7 +667,7 @@ spec:
                 add:
                 - SYS_NET_ADMIN
           - name: init-container02
-            image: nginx:1.25
+            image: nginx:dontpull
             securityContext:
               allowPrivilegeEscalation: false
               runAsNonRoot: true
@@ -714,7 +714,7 @@ spec:
               type: RuntimeDefault
           containers:
           - name: container01
-            image: nginx:1.25
+            image: nginx:dontpull
             securityContext:
               allowPrivilegeEscalation: false
               runAsNonRoot: true
@@ -745,7 +745,7 @@ spec:
               type: RuntimeDefault
           containers:
           - name: container01
-            image: nginx:1.25
+            image: nginx:dontpull
             ports:
             - name: web-insecure
               containerPort: 8080
@@ -780,7 +780,7 @@ spec:
               type: RuntimeDefault
           containers:
           - name: container01
-            image: nginx:1.25
+            image: nginx:dontpull
             securityContext:
               windowsOptions:
                 hostProcess: true
@@ -813,7 +813,7 @@ spec:
               type: RuntimeDefault
           containers:
           - name: container01
-            image: nginx:1.25
+            image: nginx:dontpull
             securityContext:
               privileged: true
               allowPrivilegeEscalation: false
@@ -844,7 +844,7 @@ spec:
               type: RuntimeDefault
           containers:
           - name: container01
-            image: nginx:1.25
+            image: nginx:dontpull
             securityContext:
               seLinuxOptions:
                 type: container_engine_t
@@ -876,7 +876,7 @@ spec:
               type: RuntimeDefault
           containers:
           - name: container01
-            image: nginx:1.25
+            image: nginx:dontpull
             securityContext:
               allowPrivilegeEscalation: false
               runAsNonRoot: true
@@ -908,7 +908,7 @@ spec:
               value: "4"
           containers:
           - name: container01
-            image: nginx:1.25
+            image: nginx:dontpull
             securityContext:
               allowPrivilegeEscalation: false
               runAsNonRoot: true
@@ -934,7 +934,7 @@ spec:
           restartPolicy: OnFailure
           containers:
           - name: container01
-            image: nginx:1.25
+            image: nginx:dontpull
             securityContext:
               allowPrivilegeEscalation: false
               runAsNonRoot: true
@@ -966,7 +966,7 @@ spec:
           restartPolicy: OnFailure
           containers:
           - name: container01
-            image: nginx:1.25
+            image: nginx:dontpull
             securityContext:
               allowPrivilegeEscalation: false
               runAsNonRoot: true
@@ -1001,7 +1001,7 @@ spec:
               type: RuntimeDefault
           containers:
           - name: container01
-            image: nginx:1.25
+            image: nginx:dontpull
             securityContext:
               seLinuxOptions:
                 user: sysadm_u
