--- a/pod-security/subrule/restricted/restricted-exclude-seccomp/pod-bad.yaml
+++ b/pod-security/subrule/restricted/restricted-exclude-seccomp/pod-bad.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
   - name: container01
-    image: nginx:1.1.9
+    image: nginx:dontpull
     securityContext:
       allowPrivilegeEscalation: true
       runAsNonRoot: true
@@ -22,7 +22,7 @@ metadata:
 spec:
   containers:
   - name: container01
-    image: nginx:1.1.9
+    image: nginx:dontpull
     securityContext:
       allowPrivilegeEscalation: false
       runAsNonRoot: false
@@ -39,7 +39,7 @@ metadata:
 spec:
   containers:
   - name: container01
-    image: nginx:1.1.9
+    image: nginx:dontpull
     securityContext:
       allowPrivilegeEscalation: false
       runAsNonRoot: false
@@ -56,7 +56,7 @@ metadata:
 spec:
   containers:
   - name: container01
-    image: nginx:1.1.9
+    image: nginx:dontpull
     securityContext:
       allowPrivilegeEscalation: false
       runAsNonRoot: true
@@ -70,7 +70,7 @@ metadata:
 spec:
   containers:
   - name: container01
-    image: nginx:1.1.9
+    image: nginx:dontpull
     securityContext:
       allowPrivilegeEscalation: false
       runAsUser: 0
