--- a/pod-security/subrule/restricted/restricted-exclude-seccomp/pod-good.yaml
+++ b/pod-security/subrule/restricted/restricted-exclude-seccomp/pod-good.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
   - name: container01
-    image: nginx:1.1.9
+    image: nginx:dontpull
     securityContext:
       allowPrivilegeEscalation: false
       runAsNonRoot: true
