fix: incorrect patched resources in tests
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/karpenter/set-karpenter-non-cpu-limits/pod-ephemeral-storage-patched2.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/pod-ephemeral-storage-patched2.yaml
@@ -10,6 +10,7 @@ spec:
       resources:
         requests:
           ephemeral-storage: "1Gi"
+          memory: "1Gi"
         limits:
           cpu: "1"
           memory: "1Gi"
