--- a/karpenter/set-karpenter-non-cpu-limits/pod-ephemeral-storage-patched1.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/pod-ephemeral-storage-patched1.yaml
@@ -10,6 +10,7 @@ spec:
       resources:
         limits:
           ephemeral-storage: "1Gi"
+          memory: "1Gi"
         requests:
           cpu: "1"
           memory: "1Gi"
