fix: mutation tests expected resources
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched2.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched2.yaml
@@ -10,6 +10,7 @@ spec:
       resources:
         requests:
           memory: "1Gi"
+          ephemeral-storage: "1Gi"
         limits:
           cpu: "1"
           memory: "1Gi"
