--- a/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched1.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched1.yaml
@@ -10,6 +10,7 @@ spec:
       resources:
         limits:
           memory: "1Gi"
+          ephemeral-storage: "1Gi"
         requests:
           cpu: "1"
           memory: "1Gi"
