chore: refresh-env-var-ns - split deletion tasks
Signed-off-by: ShutingZhao <shuting@nirmata.com>

--- a/other/rec-req/refresh-env-var-in-pod/05-check.yaml
+++ b/other/rec-req/refresh-env-var-in-pod/05-check.yaml
@@ -54,4 +54,9 @@ commands:
     else
         exit 1;
     fi
-- command: kubectl delete all --all --force --grace-period=0 -n refresh-env-var-ns
+- command: kubectl delete deployment --all --force --grace-period=0 -n refresh-env-var-ns
+- command: kubectl delete secret --all --force --grace-period=0 -n refresh-env-var-ns
+- command: kubectl delete clusterrole kyverno:background-controller:refresh-env-var-in-pod
+- command: kubectl delete cpol --all
+- command: sleep 3
+- command: kubectl delete ns refresh-env-var-ns
